B-1B: add livery support and one new livery; improve contrail and afterburner effects
[Ludovic Brenta]
* B-1B-set.xml,
  Models/b1b.ac, Models/B-1B.xml,
  Models/engine_outlet.{ac,xml},
  Models/gbu-31.ac, Models/gbu-31{a,f,i,gi}.xml,
  Nasal/b1b.nas: add livery support.
* Rename files:
  Models/bone-body.png -> Models/Liveries/bad-to-the-bone-body.png
  Models/b1b_body_front.png -> Models/Liveries/bad-to-the-bone-front.png
  Models/b1b_body_rear.png -> Models/Liveries/bad-to-the-bone-rear.png
* Models/Liveries/bad-to-the-bone.xml: new.

[Andreas Spiekermann]
* New livery:
  Models/Liveries/live-free-or-die-body.png,
  Models/Liveries/live-free-or-die-front.png,
  Models/Liveries/live-free-or-die-rear.png,
  Models/Liveries/live-free-or-die.xml.
* Models/Effects/afterburner[1-4].xml: improve afterburner effects.
* Models/Effects/contrail.xml: improve contrail effects.
* Models/Effects/engblast[1-4].xml: improve engine blast effects.
* Models/Effects/gearsmoke_{left,right}.xml: improve gear smoke effects.
* Models/Effects/smoke.png: new.
 Models/Effects/vapour_wing.xml: improve and use the above.

git-svn-id: http://svn.code.sf.net/p/flightgear/fgaddon/trunk/Aircraft/B-1B@896 9eb9bc84-db9d-4e05-893b-26dd41ac94a6

--- a/Models/engine_outlet.ac
+++ b/Models/engine_outlet.ac
@@ -11,7 +11,7 @@ OBJECT poly
 name "engine_outlet.009_0"
 data 8
 fuse.021
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -176,7 +176,7 @@ OBJECT poly
 name "engine_outlet.015_0"
 data 8
 fuse.027
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -341,7 +341,7 @@ OBJECT poly
 name "engine_outlet.014_0"
 data 8
 fuse.026
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -506,7 +506,7 @@ OBJECT poly
 name "engine_outlet.008_0"
 data 8
 fuse.020
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -671,7 +671,7 @@ OBJECT poly
 name "engine_outlet.016_0"
 data 8
 fuse.028
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -836,7 +836,7 @@ OBJECT poly
 name "engine_outlet.011_0"
 data 8
 fuse.023
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -1001,7 +1001,7 @@ OBJECT poly
 name "engine_outlet.010_0"
 data 8
 fuse.022
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -1166,7 +1166,7 @@ OBJECT poly
 name "engine_outlet.013_0"
 data 8
 fuse.025
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -1331,7 +1331,7 @@ OBJECT poly
 name "engine_outlet.012_0"
 data 8
 fuse.024
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -1496,7 +1496,7 @@ OBJECT poly
 name "engine_outlet.002_0"
 data 8
 fuse.014
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -1661,7 +1661,7 @@ OBJECT poly
 name "engine_outlet.003_0"
 data 8
 fuse.015
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -1826,7 +1826,7 @@ OBJECT poly
 name "engine_outlet.001_0"
 data 8
 fuse.013
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 12
@@ -1997,7 +1997,7 @@ OBJECT poly
 name "engine_outlet.006_0"
 data 8
 fuse.018
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -2162,7 +2162,7 @@ OBJECT poly
 name "engine_outlet.007_0"
 data 8
 fuse.019
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -2327,7 +2327,7 @@ OBJECT poly
 name "engine_outlet.004_0"
 data 8
 fuse.016
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
@@ -2492,7 +2492,7 @@ OBJECT poly
 name "engine_outlet.005_0"
 data 8
 fuse.017
-texture "bone-body.png"
+texture "Liveries/bad-to-the-bone-body.png"
 texrep 1 1
 crease 30
 numvert 10
